--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 description: "This research project develops training materials for researchers wanting to learn to build project websites in GitHub with GitHub Pages."
 email: "team@carpentries.org"
-twitter: "https://twitter.com/thecarpentries"
+twitter: "https://twitter.com/thecarpentries
